# Matrix-and-Graph-Sercher

./: CMakeLists.txt  README.md  SearchSolution.cpp  SearchSolution.h  graphs.txt  log.txt  main.cpp
Algorithms/: AStar.h  BFS.h  BestFirstSearch.h  DFS.h  Searcher.h
CachManager/: FileCacheManager.h  MatrixFileCacheManager.h
Clienthandler/: MyClientHandler.h  MyTestClientHandler.h
Server/: Server.h
Solvable/: Matrix.cpp  Matrix.h  Problem.h  Searchable.h  StringReverser.h
Utils/: CostComparator.h  Position.h
